--- a/form.html
+++ b/form.html
@@ -23,7 +23,20 @@
                 <fieldset>
                     <label for="profile-picture">Upload a profile picture: <input type="file" id="profile-picture" name="profile-picture"></label>
                     <label for="age">Input your age (years): <input type="number" min="13" max="120" id="age" name="age"></label>
+                    <label for="referrer">How did you hear about us?
+                        <select id="referrer" name="referrer">
+                            <option value="">(select one)</option>
+                            <option value="1">freeCodeCamp News</option>
+                            <option value="2">freeCodeCamp YouTube Channel</option>
+                            <option value="3">freeCodeCamp Forum</option>
+                            <option value="4">Other</option>
+                        </select>
+                    </label>
+                    <label for="bio">Provide a bio:
+                        <textarea id="bio" rows="3" cols="30" placeholder="I like coding on the beach..." name="text"></textarea>
+                    </label>
                 </fieldset>
+                <input type="submit" value="Submit">
             </form>
         </body>
 </html>
